# OBS-SC2Switcher

./: APIState.h  CMakeLists.txt  Config.cpp  Config.h  Constants.h  Observer.h  README.md  SC2Data.cpp  SC2Data.h  SC2State.cpp  SC2State.h  SceneSwitcher.cpp  SceneSwitcher.h  ScoreTracker.cpp  ScoreTracker.h  SettingsDialog.cpp  SettingsDialog.h  Webhook.cpp  Webhook.h  auto-scene-switcher.cpp  auto-scene-switcher.hpp  auto-scene-switcher.ui  buildspec.json  frontend-tools.c  log.h  obs-util.h  sc2switcher.c  sc2switcher.cpp  ui_auto-scene-switcher.h
.github/scripts/: .Brewfile  .Wingetfile  .build.zsh
.github/workflows/: main.yml
cmake/: FindJansson.cmake  ObsPluginHelpers.cmake
forms/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  auto-scene-switcher.ui
src/: Config.cpp  Config.h  Constants.h  SC2Data.h  SceneSwitcher.cpp  SceneSwitcher.h  SettingsDialog.cpp  SettingsDialog.h  Webhook.cpp  log.h  plugin-macros.h.in  plugin-main.c
src/forms/: SettingsDialog.ui
